Редактирование группы мультиязычность

--- a/TestChat/Base.lproj/Localizable.strings
+++ b/TestChat/Base.lproj/Localizable.strings
@@ -8,3 +8,27 @@
 "Login" = "Login";
 "save" = "save";
 "About Me" = "About Me";
+"Chat" = "Chat";
+"Profile" = "Profile";
+"Contact" = "Contact";
+"Reset password" = "Reset password";
+"LogOut" = "LogOut";
+"Add user" = "Add user";
+"Email" = "Email";
+"Back" ="Back";
+"Contacts" = "Contacts";
+"Password" = "Password";
+"Register" ="Register";
+"Forgot Password" = "Forgot Password";
+"Last name" ="Last name";
+"First Name" = "First Name";
+"Settings" = "Settings";
+"Edit" = "Edit";
+"Search" = "Search";
+"Make Photo" = "Make Photo";
+"Chose Photo" = "Chose Photo";
+"Make Video" = "Make Video";
+"Chose Video" = "Chose Video";
+"Cancel" = "Cancel";
+"Group" = "Group";
+"Add user" = "Add user";
