--- a/TestChat/en.lproj/Localizable.strings
+++ b/TestChat/en.lproj/Localizable.strings
@@ -8,18 +8,18 @@
 "Login" = "Login";
 "save" = "save";
 "About Me" = "About Me";
-"Chat" = "Chat";
+"Chats" = "Chats";
 "Profile" = "Profile";
 "Contact" = "Contact";
 "Reset password" = "Reset password";
-"LogOut" = "LogOut";
+"LOGOUT" = "LOGOUT";
 "Add user" = "Add user";
 "Email" = "Email";
 "Back" ="Back";
 "Contacts" = "Contacts";
 "Password" = "Password";
 "Register" ="Register";
-"Forgot Password" = "Forgot Password";
+"Forgot password" = "Forgot password";
 "Last name" ="Last name";
 "First Name" = "First Name";
 "Settings" = "Settings";
@@ -33,3 +33,14 @@
 "Group" = "Group";
 "Add user" = "Add user";
 "SEND PASSWORD" = "SEND PASSWORD";
+"Main Settings" = "Main Settings";
+"Language" = "Language";
+"Password again" = "Password again";
+"Edit Profile" = "Edit Profile";
+"Group Name" = "Group Name";
+"Add User" = "Add User";
+"Create Group" = "Create Group";
+"SIGN IN" = "SIGN IN";
+"Do not have an account?" = "Do not have an account?";
+"Sing Up!" = "Sing Up!";
+"SignUp" = "SignUp";
