--- a/TestChat/ru.lproj/Localizable.strings
+++ b/TestChat/ru.lproj/Localizable.strings
@@ -8,18 +8,18 @@
 "Login" = "Логин";
 "save" = "Сохранить";
 "About Me" = "Обо мне";
-"Chat" = "Чат";
+"Chats" = "Чаты";
 "Profile" = "Профиль";
 "Contact" = "Контакты";
 "Reset password" = "Сброс пароля";
-"LogOut" = "Выйти";
+"LOGOUT" = "Выйти";
 "Add user" = "Добавить пользователя";
 "Email" = "Email";
 "Back" ="Назад";
 "Contacts" = "Контакты";
 "Password" = "Пароль";
-"Register" ="Регистрация";
-"Forgot Password" = "Забыл пароль";
+"Register" = "Регистрация";
+"Forgot password" = "Забыл пароль";
 "Last name" ="Фамилия";
 "First Name" = "Имя";
 "Settings" = "Настройки";
@@ -33,3 +33,14 @@
 "Group" = "Группа";
 "Add user" = "добавить пользователя";
 "SEND PASSWORD" = "ОТПРАВИТЬ ПАРОЛЬ";
+"Main Settings" = "Мои настойки";
+"Language" = "Язык";
+"Password again" = "Повторить пароль";
+"Edit Profile" = "Редактировать Профиль";
+"Group Name" = "Название Групы";
+"Add User" = "Добавить Пользователя";
+"Create Group" = "Создать Группу";
+"SIGN IN" = "ВОЙТИ";
+"Do not have an account?" = "Нет аккаунта?";
+"Sing Up!" = "Регистрация!";
+"SignUp" = "Регистрация";
