--- a/TestChat/Base.lproj/Localizable.strings
+++ b/TestChat/Base.lproj/Localizable.strings
@@ -5,10 +5,12 @@
   Created by Руслан Казюка on 24.04.2018.
   Copyright © 2018 Руслан Казюка. All rights reserved.
 */
+"SignUp" = "SignUp";
+"SIGN IN" = "SIGN IN";
 "Login" = "Login";
 "save" = "save";
 "About Me" = "About Me";
-"Chat" = "Chat";
+"Chats" = "Chats";
 "Profile" = "Profile";
 "Contact" = "Contact";
 "Reset password" = "Reset password";
@@ -19,9 +21,9 @@
 "Contacts" = "Contacts";
 "Password" = "Password";
 "Register" ="Register";
-"Forgot Password" = "Forgot Password";
+"Forgot password" = "Forgot password";
 "Last name" ="Last name";
-"First Name" = "First Name";
+"First name" = "First name";
 "Settings" = "Settings";
 "Edit" = "Edit";
 "Search" = "Search";
@@ -33,3 +35,13 @@
 "Group" = "Group";
 "Add user" = "Add user";
 "SEND PASSWORD" = "SEND PASSWORD";
+"Main Settings" = "Main Settings";
+"Language" ="Language";
+"Password again" = "Password again";
+"LOGOUT" = "LOGOUT";
+"Edit Profile" = "Edit Profile";
+"Group Name" = "Group Name";
+"Add User" = "Add User";
+"Create Group" = "Create Group";
+"Do not have an account?" = "Do not have an account?";
+"Sing Up!" = "Sing Up!";
