change image size, change search bar size, push

--- a/TalkerChat/Base.lproj/Localizable.strings
+++ b/TalkerChat/Base.lproj/Localizable.strings
@@ -54,3 +54,4 @@
 "Fill in all the fields!!" = "Fill in all the fields!!";
 "To change the password, check the e-mail!" = "To change the password, check the e-mail!";
 "Edit Group" = "Edit Group";
+"Data saved" = "Data saved";
