--- a/TalkerChat/ru.lproj/Localizable.strings
+++ b/TalkerChat/ru.lproj/Localizable.strings
@@ -54,3 +54,4 @@
 "Fill in all the fields!!" = "Заполните все поля!!";
 "To change the password, check the e-mail!" = "Для замены пароля проверьте электорнную почту!";
 "Edit Group" = "Редактировать Группу";
+"Data saved" = "Данные сохранены";
