--- a/TalkerChat/en.lproj/Localizable.strings
+++ b/TalkerChat/en.lproj/Localizable.strings
@@ -54,3 +54,4 @@
 "To change the password, check the e-mail!" = "To change the password, check the e-mail!";
 "Edit Group" = "Edit Group";
 "Data saved" = "Data saved";
+"REMOVE GROUP" = "REMOVE GROUP";
