--- a/TalkerChat/ru.lproj/Localizable.strings
+++ b/TalkerChat/ru.lproj/Localizable.strings
@@ -55,3 +55,4 @@
 "To change the password, check the e-mail!" = "Для замены пароля проверьте электорнную почту!";
 "Edit Group" = "Редактировать Группу";
 "Data saved" = "Данные сохранены";
+"REMOVE GROUP" = "УДАЛИТЬ ГРУППУ";
