--- a/TalkerChat/Base.lproj/Localizable.strings
+++ b/TalkerChat/Base.lproj/Localizable.strings
@@ -55,3 +55,4 @@
 "To change the password, check the e-mail!" = "To change the password, check the e-mail!";
 "Edit Group" = "Edit Group";
 "Data saved" = "Data saved";
+"REMOVE GROUP" = "REMOVE GROUP";
